<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.parkinGenie.UserRegistration">

    <EditText
        android:id="@+id/txtLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/l_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtFName"
        app:layout_constraintTop_toBottomOf="@+id/txtFName" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/txtLName"
        app:layout_constraintTop_toBottomOf="@+id/txtLName" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/telephone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/txtConfPass"
        app:layout_constraintTop_toBottomOf="@+id/txtConfPass" />

    <EditText
        android:id="@+id/txtFName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="353dp"
        android:ems="10"
        android:hint="@string/f_Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnContReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <EditText
        android:id="@+id/txtCreatePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/create_passwor"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtConfPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/conf_pass"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/txtCreatePass"
        app:layout_constraintTop_toBottomOf="@+id/txtCreatePass" />

    <Button
        android:id="@+id/btnContReg"
        android:layout_width="118dp"
        android:layout_height="66dp"
        android:layout_marginTop="560dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_cont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
